<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Android Labs</string>
    <string name="preference_file_key" translatable="false">Android_Lab_06</string>
    <string name="TextViewEnterEmailID" translatable="false"> Enter your email address: </string>
    <string name="EditHintEmail_text" translatable="false"> Type email here </string>
    <string name="TextViewEnterPwdID" translatable="false"> Type your password: </string>
    <string name="EditHintPwd_text" translatable="false"> ************ </string>
    <string name="buttonLoginID" translatable="false">Login</string>

    <string name="buttonLoginID2" translatable="false">Go to chat</string>
    <string name="yourProfile_label" translatable="false">Your profile</string>
    <string name="yourName_label" translatable="false">Your name:</string>
    <string name="enterYourName_text" translatable="false">Enter your name</string>
    <string name="yourEmail_label" translatable="false">Your email:</string>
    <string name="enterYourEmail_text" translatable="false">Enter your email</string>
    <string name="yourPic_label" translatable="false">Your picture:</string>
    <string name="clickMe_label" translatable="false">Click the button above to take a picture</string>


    <string name="goToChatID" translatable="false">Go to chat!</string>
    <string name="sendButtonID" translatable="false">SEND</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="receiveButtonID" translatable="false">RECEIVE</string>
    <string name="typeHereHint_text" translatable="false">Type Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="fragmentMessageHereTxt" translatable="false">Message Here</string>
    <string name="fragmentIDTxt" translatable="false">ID = </string>
    <string name="fragmentCheckedBoxTxt" translatable="false">is a Send Message</string>
    <string name="fragmentHideBtn" translatable="false">HIDE</string>

</resources>
