<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDetailsID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mgID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragmentMessageHereTxt" />

            <TextView
                android:id="@+id/idID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragmentIDTxt" />

            <CheckBox
                android:id="@+id/checkBoxID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragmentCheckedBoxTxt" />
        </LinearLayout>

        <Button
            android:id="@+id/hideBtnID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/fragmentHideBtn" />

    </LinearLayout>

</FrameLayout>